--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container-fluid">
       <div class="row align-items-center">
         <div class="col">
-          <h1></h1>
+          <h1>Mobile Toilets for Hire Kenya </h1>
         </div>
         <div class="col text-end">
           <strong>
